# stm32-learn

./: CMakeLists.txt  README.md  deploy.sh  stm32.cfg  stm32f10x_flash.ld
apps/buzzer/: CMakeLists.txt
apps/buzzer/src/: main.c  main.cpp
apps/led/: CMakeLists.txt
apps/led/src/: main.c  main.cpp  stm32f10x_conf.h
lib/sys/: CMakeLists.txt
lib/utils/: CMakeLists.txt
lib/utils/include/: Delay.h  Random.h
lib/utils/src/: Delay.c  Random.c
src/: main.c
